# trm

./: .gitignore  README.md  eval.py  issues.md  notes.md  objectives.md  plan.md  progress.md  pyproject.toml  ralph_progress.txt  ralph_scratch_pad.md  run.sh  todo.md  train.py
.claude/: settings.json
scripts/: download_sudoku.py
src/: config.py
src/dataset/: sudoku_dataset.py
src/model/: __init__.py  embedder.py  loss.py  reasoner.py  sudoku.py  trm.py
src/model/layers/: __init__.py  attention.py  rmsnorm.py  rotary.py  swiglu.py
tests/: test_loss.py  test_sudoku_data.py  test_sudoku_model.py  test_trm_carry.py
