[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "argdantic",
    "huggingface_hub",
    "numpy",
    "pydantic",
    "pytest",
    "setuptools",
    "torch",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
