[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "argdantic",
    "huggingface_hub",
    "numpy",
    "pydantic",
    "pytest",
    "setuptools",
    "tqdm",
    "torch"
]
# torch excluded - install separately with your preferred CUDA version

[tool.setuptools.packages.find]
where = ["src"]
